<resources>
    <string name="app_name">FANTASYFOOTBALL</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="title_activity_ctransfert_market">CTransfertMarketActivity</string>
    <string name="transfert_research_textview">CRITERES DE RECHERCHE</string>
    <string name="transfert_team_textview">EQUIPE : </string>
    <string name="transfert_age_textview">AGE : </string>
    <string name="transfert_name_textview">NOM : </string>
    <string name="transfert_profile_button_text"> PROFIL </string>
    <string name="transfert_buy_button_text"> ACHAT </string>
    <string name="transfert_research_button_text"> RECHERCHE </string>
    <string name="transfert_not_specified_text"> indet </string>
    <string name="transfert_radiobutton_inf_text"> inf </string>
    <string name="transfert_radiobutton_eq_text"> = </string>
    <string name="transfert_radiobutton_sup_text"> sup </string>
    <string name="loading">chargement</string>

    <string-array name="age_array">
        <item> = </item>
        <item> inf </item>
        <item> sup </item>
    </string-array>

    <string-array name="list_age_array">
        <item> 16 </item>
        <item> 17 </item>
        <item> 18 </item>
        <item> 19 </item>
        <item> 20 </item>
        <item> 21 </item>
        <item> 22 </item>
        <item> 23 </item>
        <item> 24 </item>
        <item> 25 </item>
        <item> 26 </item>
        <item> 27 </item>
        <item> 28 </item>
        <item> 29 </item>
        <item> 30 </item>
        <item> 31 </item>
        <item> 32 </item>
        <item> 33 </item>
        <item> 34 </item>
        <item> 35 </item>
        <item> 36 </item>
        <item> 37 </item>
        <item> 38 </item>
        <item> 39 </item>
    </string-array>

    <string-array name="clubs_array">
        <item> psg </item>
        <item> om </item>
        <item> fc nantes </item>
        <item> as monaco </item>
        <item> ol </item>
    </string-array>
    <string name="title_activity_cbase">CBaseActivity</string>
    <string name="drawer_item_settings">name</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_ctabs">CTabsActivity</string>
    <string name="title_activity_cauthentification">CAuthentificationActivity</string>
</resources>
